# NumericMethodsCourceWork

./: CMakeLists.txt  main.cpp  nodes.txt  run.sh
include/: InterpolatedFunctions.h
src/: InterpolatedFunctions.cpp
